<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/sign_up_icon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_baseline_emoji_objects_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_icon"
        android:orientation="vertical"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="32dp"
        android:id="@+id/hello_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_text"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_welcome_text"
            android:textStyle="bold"
            android:textSize="36sp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_form_layout"
        android:layout_below="@id/hello_layout"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="32dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_edit_text"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint_text"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/white"
            android:padding="16dp"
            android:layout_margin="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_edit_text"
            android:inputType="textPassword"
            android:hint="@string/password_hint_text"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/white"
            android:padding="16dp"
            android:layout_margin="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_password_edit_text"
            android:inputType="textPassword"
            android:hint="@string/confirm_password_hint_text"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/white"
            android:padding="16dp"
            android:layout_margin="12dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:id="@+id/create_account_button"
            android:text="@string/create_account_btn_text"
            android:textColor="@color/black"
            android:backgroundTint="@color/purple_200"
            android:layout_marginTop="10dp"
            android:textSize="16sp"/>

        <ProgressBar
            android:layout_width="24dp"
            android:layout_height="64dp"
            android:id="@+id/progress_bar"
            android:indeterminateTint="@color/white"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_marginTop="12dp"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_form_layout"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_txt"
            android:textColor="@color/white"
            android:paddingRight="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_text_view_button"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/login_link_text"/>

    </LinearLayout>


</RelativeLayout>