<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/sign_up_icon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/ic_baseline_emoji_objects_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_icon"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="32dp"
        android:orientation="vertical"
        android:id="@+id/hello_layout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_text"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome_back_text"
            android:textStyle="bold"
            android:textSize="36sp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hello_layout"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/email_hint_text"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/white"
            android:padding="16dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/white"
            android:hint="@string/password_hint_text"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="12dp"
            android:text="@string/login_btn_txt"
            android:textColor="@color/black"
            android:backgroundTint="@color/purple_200"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="24dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_marginTop="12dp"
            android:indeterminateTint="@color/primary"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_form_layout"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_text"
            android:textColor="@color/white"
            android:paddingRight="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_account_text_view_button"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/sign_up_link__text"/>

    </LinearLayout>


</RelativeLayout>