<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Page__BGCOLOR"
    tools:context=".edit_answer">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="176dp"
        android:layout_height="24dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="88dp"
        android:text="@string/Answer_Des"
        android:textColor="@color/purple_200"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/Header_Black"
        android:text="@string/Edit_answer"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/Textanswer"
        android:layout_width="332dp"
        android:layout_height="154dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/text_border"
        android:backgroundTint="@color/Answer_Box"
        android:textColor="@color/My_color"
        android:textColorHint="@color/My_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="56dp"
        android:layout_height="54dp"
        app:srcCompat="@drawable/ic_baseline_menu_24"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="10dp" />


    <Button
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/Save_Changes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/Cancel_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/update"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:backgroundTint="#671515"
        android:text="@string/Delete_Answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <View
        android:id="@+id/divider"
        android:layout_width="410dp"
        android:layout_height="3dp"
        android:layout_marginTop="68dp"
        android:background="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@+id/Textanswer"
        tools:layout_editor_absoluteX="1dp" /><![CDATA[



    />


]]>
</androidx.constraintlayout.widget.ConstraintLayout>