<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bt"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnQuiz"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="80dp"
        android:background="@color/purple_200"
        android:text="@string/btnQuiz"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnResources"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topicApp" />

    <Button
        android:id="@+id/btnPofile"
        android:layout_width="118dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_corner_btn_next"
        android:text="@string/User_profile"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topicApp" />

    <Button
        android:id="@+id/btnResources"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:background="@color/purple_200"
        android:text="@string/btnResources"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMyNotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnQuiz" />

    <TextView
        android:id="@+id/topicApp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:height="70dp"
        android:background="@color/black_200"
        android:gravity="center"
        android:text="@string/topicApp"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/menu_btn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/ic_baseline_menu_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnMyNotes"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="200dp"
        android:background="@color/purple_200"
        android:text="@string/myNotes"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResources" />

    ImageButton
        android:id="@+id/imageButton"
        android:layout_width="110dp"
        android:layout_height="132dp"
        app:srcCompat="@drawable/profile"
        tools:layout_editor_absoluteX="285dp"
        tools:layout_editor_absoluteY="83dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
