<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Page__BGCOLOR"
    tools:context=".user_profile">

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="369dp"
        android:layout_height="33dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="236dp"
        android:background="@color/Text_Box_Color"
        android:text=""
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/Header_Black"
        android:text="@string/User_profile"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="56dp"
        android:layout_height="54dp"
        app:srcCompat="@drawable/ic_baseline_menu_24"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="6dp" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="110dp"
        android:layout_height="132dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="84dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView16"
        app:srcCompat="@drawable/profile" />

    <Button
        android:id="@+id/btnViewNotes"
        android:layout_width="412dp"
        android:layout_height="77dp"
        android:layout_marginTop="324dp"
        android:background="@color/purple_700"
        android:text="@string/View_My_Notes"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnViewQuiz"
        android:layout_width="412dp"
        android:layout_height="77dp"
        android:layout_marginTop="400dp"
        android:background="@color/purple_700"
        android:text="@string/View_my_quizzes"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAddResource"
        android:layout_width="412dp"
        android:layout_height="77dp"
        android:layout_marginTop="476dp"
        android:background="@color/purple_700"
        android:text="Add Resource"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="107dp"
        android:layout_height="53dp"
        android:layout_marginTop="632dp"
        android:background="@color/purple_700"
        android:text="@string/logoutBtnText"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>